--- a/PatientSearchModule/Views/PatientSearchView.xaml
+++ b/PatientSearchModule/Views/PatientSearchView.xaml
@@ -3,54 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:viewModels="clr-namespace:PatientSearchModule.ViewModels"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
+             xmlns:views="clr-namespace:Shared.Patient.Views;assembly=Shared.Patient"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance viewModels:PatientSearchViewModel}">
-    <DockPanel LastChildFill="True"
-               HorizontalAlignment="Stretch"
-               VerticalAlignment="Stretch">
-        <xctk:WatermarkTextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
-                               DockPanel.Dock="Top"
-                               Margin="5 15 5 5"
-                               MaxLength="200">
-            <xctk:WatermarkTextBox.Watermark>
-                <TextBlock Text="Начните вводить любое имя, номер документа или дату для поиска пациента"
-                           Style="{x:Null}" />
-            </xctk:WatermarkTextBox.Watermark>
-            <i:Interaction.Behaviors>
-                <behaviors:DependentCollectionNavigationBehavior DependentItemsControl="{Binding ElementName=listBox}" />
-            </i:Interaction.Behaviors>
-        </xctk:WatermarkTextBox>
-        <Grid HorizontalAlignment="Stretch"
-              VerticalAlignment="Stretch">
-            <ListBox HorizontalAlignment="Stretch"
-                     VerticalAlignment="Stretch"
-                     Margin="5"
-                     BorderThickness="0"
-                     Background="{x:Null}"
-                     ItemsSource="{Binding Patients}"
-                     HorizontalContentAlignment="Stretch"
-                     IsSynchronizedWithCurrentItem="True" 
-                     x:Name="listBox"
-                     FocusVisualStyle="{x:Null}">
-                <ListBox.Resources>
-                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}"
-                                     Color="DarkBlue" />
-                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}"
-                                     Color="DarkBlue" />
-                </ListBox.Resources>
-            </ListBox>
-            <ContentControl Content="{Binding BusyMediator}"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch" />
-            <ContentControl Content="{Binding FailureMediator}"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch" />
-        </Grid>
-    </DockPanel>
+             d:DataContext="{d:DesignInstance viewModels:PatientSearchContentViewModel}">
+    <views:PatientSearchControl HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                DataContext="{Binding PersonSearchViewModel}" />
 </UserControl>
