--- a/Shared/Shared.Patient/Views/PhotoView.xaml
+++ b/Shared/Shared.Patient/Views/PhotoView.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary x:Class="Core.View.PhotoView"
+﻿<ResourceDictionary x:Class="Shared.Patient.Views.PhotoView"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
