--- a/PatientInfoModule/Views/Documents/DocumentsHeaderView.xaml
+++ b/PatientInfoModule/Views/Documents/DocumentsHeaderView.xaml
@@ -10,14 +10,20 @@
                       d:DesignWidth="300"
                       d:DataContext="{d:DesignInstance viewModels:DocumentsHeaderViewModel}"
                       Header="Прикрепленные документы">
-    <fluent:RibbonGroupBox Header="Сканирование" FontWeight="Medium">
+    <fluent:RibbonGroupBox FontWeight="Medium">
         <fluent:Button x:Name="btnScanning" Command="{Binding ScanningCommand}" 
-                       Header="Сканировать" LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Scanner48x48.png" />
+                       Header="Сканировать" 
+                       Margin="5,2"
+                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Scanner48x48.png" />
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Документы" FontWeight="Medium">
         <fluent:Button x:Name="btnAddDocument" Command="{Binding AddDocumentCommand}"
-                       Header="Прикрепить эл. док." LargeIcon="pack://application:,,,/Core;Component/Resources/Images/AddAppendix48x48.png" />
+                       Margin="5,2"
+                       Header="Прикрепить" 
+                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/AddAppendix48x48.png" />
         <fluent:Button x:Name="btnRemoveDocument" Command="{Binding RemoveDocumentCommand}"
-                       Header="Удалить" LargeIcon="pack://application:,,,/Core;Component/Resources/Images/RemoveAppendix48x48.png" />
+                       Header="Удалить" 
+                       Margin="5,2"
+                       LargeIcon="pack://application:,,,/Core;Component/Resources/Images/RemoveAppendix48x48.png" />
     </fluent:RibbonGroupBox>
 </fluent:RibbonTabItem>
