--- a/OrganizationContracts/Views/AddContractOrganizationView.xaml
+++ b/OrganizationContracts/Views/AddContractOrganizationView.xaml
@@ -1,37 +1,31 @@
-﻿<UserControl x:Class="OrganizationContractsModule.Views.AddContractOrganizationView"
+﻿<ResourceDictionary x:Class="OrganizationContractsModule.Views.AddContractOrganizationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:viewModels="clr-namespace:OrganizationContractsModule.ViewModels"
-             mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="500"
-             d:DataContext="{d:DesignInstance viewModels:AddContractOrganizationViewModel}">
-    <Grid>
+             xmlns:viewModels="clr-namespace:OrganizationContractsModule.ViewModels">
+    <DataTemplate DataType="{x:Type viewModels:AddContractOrganizationViewModel}">   
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
-            
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Наименование организации:" Margin="5"/>
-            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" MinHeight="23" Margin="2"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Примечания/реквизиты:" Margin="5"/>
-            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Details, UpdateSourceTrigger=PropertyChanged}" MinHeight="23"
-                             TextWrapping="Wrap" AcceptsReturn="True" Margin="2" Height="Auto"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Наименование организации:" Margin="5"/>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" 
+                         MinHeight="23" Margin="5,5,25,5"/>
 
-            <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="Создать" Margin="3" Command="{Binding CreateOrgCommand}"/>
-                <Button Content="Отмена" Margin="3" Command="{Binding CancelCommand}"/>
-            </StackPanel>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Примечание:" Margin="5"/>
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Details, UpdateSourceTrigger=PropertyChanged}" MinHeight="23"
+                         TextWrapping="Wrap" AcceptsReturn="True" Margin="5,5,25,5" Height="Auto"/>
+            </Grid>
+            <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Grid>
-        <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-    </Grid>
-</UserControl>
+    </DataTemplate>
+</ResourceDictionary>
