--- a/PatientInfoModule/Themes/Generic.xaml
+++ b/PatientInfoModule/Themes/Generic.xaml
@@ -2,5 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/Shared.Patient;Component/Views/PhotoView.xaml" />
+        <ResourceDictionary Source="../Views/Documents/SelectPersonDocumentTypeView.xaml" />
+        <ResourceDictionary Source="../Views/Contracts/AddContractRecordsView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
