--- a/PatientInfoModule/Views/Contracts/AddContractRecordsView.xaml
+++ b/PatientInfoModule/Views/Contracts/AddContractRecordsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientInfoModule.Views.AddContractRecordsView"
+﻿<ResourceDictionary x:Class="PatientInfoModule.Views.AddContractRecordsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,54 +6,57 @@
              xmlns:wpf="http://wpfcontrols.com/"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
-             xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
-             mc:Ignorable="d" 
-             Height="Auto" Width="Auto" MinWidth="540" MaxWidth="700"
-             d:DataContext="{d:DesignInstance viewModels:AddContractRecordsViewModel}">
-    <UserControl.Resources>
-        <DataTemplate x:Key="RecordTypesAutoCompleteTemplate">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding Path=Name}" Margin="2" FontWeight="Bold" />
-            </StackPanel>
-        </DataTemplate>
-    </UserControl.Resources>
-    
-    <Grid>
-        <StackPanel Orientation="Vertical" >
-            <Label Content="Источник финансирования"/>
-            <ComboBox ItemsSource="{Binding FinancingSources}" Margin="2"
+             xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels">
+    <DataTemplate DataType="{x:Type viewModels:AddContractRecordsViewModel}">
+        <DataTemplate.Resources>
+            <DataTemplate x:Key="RecordTypesAutoCompleteTemplate">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding Path=Name}" Margin="2" FontWeight="Bold" />
+                </StackPanel>
+            </DataTemplate>
+            <ResourceDictionary x:Key="generic">                
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </DataTemplate.Resources>
+        
+        <Grid>
+            <StackPanel Orientation="Vertical" >
+                <Label Content="Источник финансирования"/>
+                <ComboBox ItemsSource="{Binding FinancingSources}" Margin="5,0,25,5"
                           SelectedValue="{Binding SelectedFinancingSourceId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                          Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
+                          Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
                           HorizontalAlignment="Stretch" />
-            <RadioButton Content="Назначенные услуги" IsChecked="{Binding IsAssignRecordsChecked, Mode=TwoWay}" Margin="2"/>
-            <ListView ItemsSource="{Binding Assignments}" SelectedItem="{Binding SelectedAssignment, Mode=TwoWay}"
+                <RadioButton Content="Назначенные услуги" IsChecked="{Binding IsAssignRecordsChecked, Mode=TwoWay}" Margin="2"/>
+                <ListView ItemsSource="{Binding Assignments}" SelectedItem="{Binding SelectedAssignment, Mode=TwoWay}"
                       Visibility="{Binding IsAssignRecordsChecked, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
                       Margin="2" MaxHeight="200" Height="Auto"
                       ScrollViewer.CanContentScroll="True"
                       ScrollViewer.VerticalScrollBarVisibility="Auto"
                       ScrollViewer.HorizontalScrollBarVisibility="Auto"
                       >
-                <ListView.View>
-                    <GridView>
-                        <GridView.Columns>
-                            <GridViewColumn x:Name="Checked" Width="40">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay}" />
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Width="120" Header="Дата" DisplayMemberBinding="{Binding Path=AssignDateTime}"></GridViewColumn>
-                            <GridViewColumn Width="280" Header="Наименование услуги" DisplayMemberBinding="{Binding Path=RecordTypeName}"></GridViewColumn>
-                            <GridViewColumn Width="80" Header="Сумма, руб." DisplayMemberBinding="{Binding Path=RecordTypeCost}"></GridViewColumn>
-                        </GridView.Columns>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-            <RadioButton Content="Услуги из номенклатуры" IsChecked="{Binding IsNewRecordChecked, Mode=TwoWay}" Margin="2"/>
-            <StackPanel Orientation="Vertical" 
+                    <ListView.View>
+                        <GridView>
+                            <GridView.Columns>
+                                <GridViewColumn x:Name="Checked" Width="40">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay}" />
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Width="120" Header="Дата" DisplayMemberBinding="{Binding Path=AssignDateTime}"></GridViewColumn>
+                                <GridViewColumn Width="280" Header="Наименование услуги" DisplayMemberBinding="{Binding Path=RecordTypeName}"></GridViewColumn>
+                                <GridViewColumn Width="80" Header="Сумма, руб." DisplayMemberBinding="{Binding Path=RecordTypeCost}"></GridViewColumn>
+                            </GridView.Columns>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+                <RadioButton Content="Услуги из номенклатуры" IsChecked="{Binding IsNewRecordChecked, Mode=TwoWay}" Margin="2"/>
+                <StackPanel Orientation="Vertical" 
                         Visibility="{Binding IsNewRecordChecked, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
-                <wpf:AutoCompleteTextBox Margin="2"
+                    <wpf:AutoCompleteTextBox Margin="2"
                                 Watermark="Введите наименование услуги для поиска..."
                                 DisplayMember="Name"
                                 ItemTemplate="{StaticResource RecordTypesAutoCompleteTemplate}"
@@ -62,39 +65,33 @@
                                 IconVisibility="Visible"
                                 Provider="{Binding RecordTypesSuggestionProvider}"
                                 x:Name="searchRecord">
-                    <wpf:AutoCompleteTextBox.LoadingContent>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="Загрузка данных..." Margin="2" FontSize="13" />
-                        </StackPanel>
-                    </wpf:AutoCompleteTextBox.LoadingContent>
-                </wpf:AutoCompleteTextBox>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Кол-во услуг" Margin="2"/>
-                    <xctk:IntegerUpDown Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch"
+                        <wpf:AutoCompleteTextBox.LoadingContent>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="Загрузка данных..." Margin="2" FontSize="13" />
+                            </StackPanel>
+                        </wpf:AutoCompleteTextBox.LoadingContent>
+                    </wpf:AutoCompleteTextBox>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="Кол-во услуг" Margin="2"/>
+                        <xctk:IntegerUpDown Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch"
                                     Height="20" Increment="1" Maximum="100" Minimum="1" 
                                     ParsingNumberStyle="Integer" TextAlignment="Left"
                                     Value="{Binding RecordsCount}" Margin="2" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Стоимость услуг, руб." Margin="2"/>
-                    <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding AssignRecordTypeCost}" 
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="Стоимость услуг, руб." Margin="2"/>
+                        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding AssignRecordTypeCost}" 
                              Margin="2" HorizontalAlignment="Stretch"/>
-                </Grid>
+                    </Grid>
+                </StackPanel>                
             </StackPanel>
-            <Button Grid.Row="3" Grid.Column="1" Command="{Binding SelectRecordsCommand}" IsEnabled="{Binding CanSelectRecords}" 
-                    HorizontalAlignment="Right" Margin="5">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="pack://application:,,,/Core;Component/Resources/Images/Ok48x48.png" Stretch="Uniform" Height="24" Width="24"/>
-                    <TextBlock Text="Выбрать" Margin="5" FontWeight="Bold" FontSize="12"/>
-                </StackPanel>
-            </Button>
-        </StackPanel>
-        <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-    </Grid>
-</UserControl>
+            <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        </Grid>
+    </DataTemplate>
+</ResourceDictionary>
