--- a/PatientInfoModule/Views/Contracts/PatientContractsView.xaml
+++ b/PatientInfoModule/Views/Contracts/PatientContractsView.xaml
@@ -11,20 +11,12 @@
              xmlns:views="clr-namespace:PatientInfoModule.Views"
              xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
-             xmlns:coremisc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:prism="http://www.codeplex.com/prism"
-             xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
+             xmlns:coremisc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"             
              mc:Ignorable="d"
              d:DesignHeight="600"
              d:DesignWidth="1024" d:DataContext="{d:DesignInstance viewModels:PatientContractsViewModel}">
     
     <UserControl.Resources>
-        <DataTemplate x:Key="NotificationWindowTemplate">
-            <Grid MinWidth="200" MinHeight="100">
-                <TextBlock TextWrapping="Wrap" Grid.Row="0" Text="{Binding}"/>
-            </Grid>
-        </DataTemplate>                
         <DataTemplate x:Key="SectionDataTemplate">
             <DockPanel LastChildFill="True">
                 <TextBlock Text="{Binding SectionName}" HorizontalAlignment="{Binding SectionAlignment}" FontWeight="Medium" Foreground="Green"/>
@@ -66,27 +58,13 @@
                                               To="{x:Static Visibility.Visible}" />
         </converters:Converter>
         <misc:ItemTemplateSelector x:Key="itemTemplateSelector"/>
+        <ResourceDictionary x:Key="generic">
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
-
-    <i:Interaction.Triggers>
-        <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmationInteractionRequest, Mode=OneWay}">
-            <popup:PopupWindowAction CenterOverAssociatedObject="True" IsModal="True"
-                                     ContentTemplate="{StaticResource NotificationWindowTemplate}">
-            </popup:PopupWindowAction>
-        </prism:InteractionRequestTrigger>
-        <prism:InteractionRequestTrigger SourceObject="{Binding NotificationInteractionRequest, Mode=OneWay}">
-            <popup:PopupWindowAction CenterOverAssociatedObject="True" IsModal="True"
-                                     ContentTemplate="{StaticResource NotificationWindowTemplate}"/>
-        </prism:InteractionRequestTrigger>
-        <prism:InteractionRequestTrigger SourceObject="{Binding AddContractRecordsInteractionRequest, Mode=OneWay}">
-            <popup:PopupWindowAction CenterOverAssociatedObject="True" IsModal="True">
-                <popup:PopupWindowAction.WindowContent>
-                    <views:AddContractRecordsView/>
-                </popup:PopupWindowAction.WindowContent>
-            </popup:PopupWindowAction>
-        </prism:InteractionRequestTrigger>
-    </i:Interaction.Triggers>
-    
+        
     <Grid>
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid.ColumnDefinitions>
@@ -161,8 +139,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" 
-                        Text="{Binding ContractName, Mode=TwoWay}" FontWeight="Bold" Margin="2"/>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding ContractName, Mode=TwoWay}" FontWeight="Bold" Margin="2"/>
                         <TextBlock Grid.Row="1" Grid.Column="0" Text="Период действия" Margin="2"/>
                         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
                             <DatePicker SelectedDate="{Binding ContractBeginDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="115" Margin="2"/>
@@ -170,52 +147,51 @@
                             <DatePicker SelectedDate="{Binding ContractEndDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="115" Margin="2"/>
                         </StackPanel>
                         <TextBlock Grid.Row="2" Grid.Column="0" Text="Источник финансирования" Margin="2"/>
-                        <ComboBox Grid.Row="2" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch"
+                        <ComboBox Grid.Row="2" Grid.Column="1" Margin="2,2,25,2" HorizontalAlignment="Stretch"
                             ItemsSource="{Binding FinancingSources}" 
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedFinancingSourceId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                            Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
                         <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственный за договор" Margin="2"/>
-                        <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2"
+                        <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2,2,25,2"
                             ItemsSource="{Binding Registrators}" 
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedRegistratorId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                            Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
 
                         <TextBlock Grid.Row="4" Grid.Column="0" Text="Заказчик" Margin="2"/>
                         <editors:AutoCompleteTextBox Name="autocomplete" Grid.Row="4" 
                                                 Grid.Column="1" 
-                                                Margin="2" 
+                                                Margin="2,2,25,2" 
                                                 Background="White" MinHeight="23"
                                                 Provider="{Binding PersonSuggestionProvider}"
                                                 DisplayMember="Field"
                                                 SelectedItem="{Binding SelectedClient, Mode=TwoWay, ValidatesOnDataErrors=True}"
                                                 Watermark="Введите Ф.И.О. заказчика для поиска..."
-                                                Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}" 
+                                                Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                                                 KeyDown="autocomplete_KeyDown" Loaded="autocomplete_Loaded"
                                                 ItemTemplate="{StaticResource ClientsAutoCompleteTemplate}"/>  
 
                         <TextBlock Grid.Row="5" Grid.Column="0" Text="Потребитель" Margin="2"/>
-                        <TextBox Grid.Row="5" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch" Height="23"
-                                   Text="{Binding Consumer}" IsReadOnly="True"/>                                
+                        <TextBox Grid.Row="5" Grid.Column="1" Margin="2,2,25,2" HorizontalAlignment="Stretch" Height="23" Text="{Binding Consumer}" IsReadOnly="True"/>                                
                         <TextBlock Grid.Row="6" Grid.Column="0" Text="Метод оплаты" Margin="2"/>
-                        <ComboBox Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2"
+                        <ComboBox Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2,2,25,2"
                             ItemsSource="{Binding PaymentTypes}" 
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedPaymentTypeId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                            Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
                         <TextBlock Grid.Row="7" Grid.Column="0" Text="№ транзакции" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
-                        <TextBox Grid.Row="7" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2" 
+                        <TextBox Grid.Row="7" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2,2,25,2" 
                             Text="{Binding TransationNumber, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"
+                            Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
                             Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
                         <TextBlock Grid.Row="8" Grid.Column="0" Text="Дата транзакции" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
-                        <TextBox Grid.Row="8" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2"
+                        <TextBox Grid.Row="8" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2,2,25,2"
                             Text="{Binding TransationDate, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"    
+                            Validation.ErrorTemplate="{StaticResource ValidationTemplate}"    
                             Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
                         
                         <Border BorderThickness="1" BorderBrush="Black" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Margin="3,0">
@@ -230,7 +206,7 @@
                         <ListView Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2" Margin="3,0,3,2" MinHeight="100" BorderThickness="1,0,1,1" BorderBrush="Black"
                         ItemsSource="{Binding ContractItems, ValidatesOnDataErrors=True}"
                         SelectedItem="{Binding SelectedContractItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"  
+                        Validation.ErrorTemplate="{StaticResource ValidationTemplate}"  
                         ItemTemplateSelector="{StaticResource itemTemplateSelector}">
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
