--- a/PatientInfoModule/Views/Documents/SelectPersonDocumentTypeView.xaml
+++ b/PatientInfoModule/Views/Documents/SelectPersonDocumentTypeView.xaml
@@ -1,57 +1,50 @@
-﻿<UserControl x:Class="PatientInfoModule.Views.SelectPersonDocumentTypeView"
+﻿<ResourceDictionary x:Class="PatientInfoModule.Views.SelectPersonDocumentTypeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
-             mc:Ignorable="d" 
-             Height="Auto" Width="Auto" MinWidth="500"
-             d:DataContext="{d:DesignInstance viewModels:SelectPersonDocumentTypeViewModel}">
-    <UserControl.Resources>        
-        <ResourceDictionary>
-            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
-            </ResourceDictionary.MergedDictionaries>            
-        </ResourceDictionary>
-    </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+             xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels">
+    <DataTemplate DataType="{x:Type viewModels:SelectPersonDocumentTypeViewModel}">
+        <DataTemplate.Resources>            
+            <ResourceDictionary>
+                <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </DataTemplate.Resources>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Тип документа"></Label>
-        <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding DocumentTypes, Mode=TwoWay}" HorizontalAlignment="Stretch"
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Label Grid.Row="0" Grid.Column="0" Content="Тип документа"></Label>
+            <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding DocumentTypes, Mode=TwoWay}" HorizontalAlignment="Stretch"
                   SelectedItem="{Binding SelectedDocumentType, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
                   DisplayMemberPath="Name" 
-                  Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
-                  Margin="5"/>
+                  Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
+                  Margin="5,5,25,5"/>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Дата документа" Margin="5"
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="Дата документа" Margin="5"
                                    Visibility="{Binding DocumentHasDate, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-        <DatePicker Grid.Row="1" Grid.Column="1" Margin="5" HorizontalAlignment="Left"
+            <DatePicker Grid.Row="1" Grid.Column="1" Margin="5,5,25,5" HorizontalAlignment="Left"
                     SelectedDateFormat="Long" 
                     SelectedDate="{Binding SelectedDocumentDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                    Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
+                    Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
                     Visibility="{Binding DocumentHasDate, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Комментарии" Margin="5"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="5" Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" 
-                 HorizontalAlignment="Stretch"/>
-
-        <Button Grid.Row="3" Grid.Column="1" Command="{Binding SelectCommand}" HorizontalAlignment="Right" Margin="5">
-            <StackPanel Orientation="Horizontal">
-                <Image Source="pack://application:,,,/Core;Component/Resources/Images/Save48x48.png" Stretch="Uniform" Height="24" Width="24"/>
-                <TextBlock Text="Сохранить" Margin="5" FontWeight="Bold" FontSize="12"/>
-            </StackPanel>
-        </Button>
-        
-    </Grid>
-</UserControl>
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Комментарии" Margin="5"/>
+            <TextBox Grid.Row="2" Grid.Column="1" Margin="5,5,25,5" 
+                     Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" 
+                     HorizontalAlignment="Stretch"/>   
+        </Grid>
+    </DataTemplate>
+</ResourceDictionary>
