--- a/PatientInfoModule/Views/Info/InsuranceDocumentView.xaml
+++ b/PatientInfoModule/Views/Info/InsuranceDocumentView.xaml
@@ -9,6 +9,7 @@
              xmlns:editors="http://wpfcontrols.com/"
              xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
              xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
+             xmlns:controls="clr-namespace:Core.Wpf.Controls;assembly=Core.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="300"
              d:DesignWidth="450" 
@@ -90,18 +91,18 @@
         <TextBlock Grid.Row="3"
                    Grid.Column="0"
                    Text="Страховая компания" />
-        <editors:AutoCompleteTextBox Grid.Row="3"
+        <controls:AutoCompleteTextBox Grid.Row="3"
                                      Grid.Column="1"
                                      Grid.ColumnSpan="3"
                                      Margin="3"
                                      Background="White"
                                      MinHeight="40"
-                                     DisplayMember="NameSMOK"
-                                     Provider="{Binding InsuranceCompanySuggestionProvider}"
+                                     DisplayMemberPath="NameSMOK"
+                                     SuggestionProvider="{Binding InsuranceCompanySuggestionProvider}"
                                      SelectedItem="{Binding InsuranceCompany, Mode=TwoWay, ValidatesOnDataErrors=True}"
                                      Watermark="Введите любое слово из названия страховой компании"
                                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
-            <editors:AutoCompleteTextBox.ItemTemplate>
+            <controls:AutoCompleteTextBox.ItemTemplate>
                 <DataTemplate DataType="{x:Type data:InsuranceCompany}">
                     <Border Padding="5">
                         <StackPanel Orientation="Vertical">
@@ -115,8 +116,8 @@
                         </StackPanel>
                     </Border>
                 </DataTemplate>
-            </editors:AutoCompleteTextBox.ItemTemplate>
-        </editors:AutoCompleteTextBox>
+            </controls:AutoCompleteTextBox.ItemTemplate>
+        </controls:AutoCompleteTextBox>
         <TextBlock Grid.Row="4"
                    Grid.Column="0"
                    Text="Действителен с" />
